# ha-hvac-control-center

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  automations.yaml  configuration.yaml  hacs.json  pyproject.toml  release-please-config.json  requirements_test.txt  scripts.yaml
.github/workflows/: pytest.yml  ruff.yml
custom_components/hvac_control/: __init__.py  config_flow.py  manifest.json  sensor.py  services.yaml
custom_components/hvac_control/frontend/: hvac-panel.js
custom_components/hvac_control_center/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  services.yaml
custom_components/hvac_control_center/frontend/: hvac-panel.js
tests/: conftest.py  test_config_flow.py  test_init.py  test_sensor.py
